chore: migrate to yarn4, add json-schema-faker, update deps and husky hooks

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
+cmd/jsonschema-gen/vendored
+
+bin/*
+!bin/.gitkeep
+
 node_modules
+
 .vscode
+.vscode-test
 *.vsix
+
+coverage
 ignore
 todo.md
-.vscode-test
+*.bck
+
+.yarn/cache/
+.yarn/install-state.gz
