--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "description": "Convert JSON data to Go type definition",
   "version": "1.4.0",
   "engines": {
-    "vscode": "^1.80.0",
+    "vscode": "^1.85.0",
     "node": ">=17.0.0"
   },
   "categories": [
@@ -87,6 +87,7 @@
           "enumDescriptions": [
             "JSON data is copied from clipboard and converted",
             "JSON data is copied from active editor selection and converted",
+            "JSON data is copied from active editor file and converted",
             "User is asked every time to select source of JSON data"
           ]
         },
@@ -117,7 +118,7 @@
           "default": [
             "go"
           ],
-          "description": "Editor languages inside which to intercept paste events. Only Go by default. Set to empty array to disable. You can also include \"*\" for all languages but it is not recommended."
+          "description": "Editor languages inside which to listen for paste events. Only Go by default. Set to empty array to disable. You can also include \"*\" for all languages but it is not recommended."
         }
       }
     }
@@ -135,25 +136,32 @@
     "publish-marketplace": "vsce publish",
     "prepare": "husky"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "./.husky/pre-push",
+      "pre-commit": "./.husky/pre-commit"
+    }
+  },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
+    "@types/glob": "8.1.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.55.0",
-    "@vscode/vsce": "^2.24.0",
-    "eslint": "^8.52.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-jest": "^27.6.3",
+    "@types/node": "^20.17.24",
+    "@types/vscode": "1.98.0",
+    "@vscode/vsce": "3.2.2",
+    "eslint": "8.57.1",
+    "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "glob": "^7.1.6",
+    "glob": "11.0.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "prettier": "^3.1.0",
-    "prettier-eslint": "^16.1.2",
-    "typescript": "^4.1.3"
+    "prettier": "3.5.3",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "5.8.2"
   },
-  "icon": "icon.png",
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
-  "type": "commonjs"
+  "icon": "./static/icon.png",
+  "packageManager": "yarn@4.7.0",
+  "type": "commonjs",
+  "dependencies": {
+    "json-schema-faker": "^0.5.8"
+  }
 }
