style: update license headers, simplify returns from async funcs, other minor changes

--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     ]
   },
   "scripts": {
-    "lint": "eslint ./src",
+    "lint": "eslint ./src ./lib/cache.js",
     "test": "jest",
     "build": "vsce package",
     "publish-marketplace": "vsce publish",
