--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "test": "jest",
     "build": "vsce package",
     "publish-marketplace": "vsce publish",
+    "publish-ovsx": "ovsx publish",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -149,6 +150,7 @@
     "glob": "^7.1.6",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "ovsx": "^0.10.8",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
     "typescript": "^4.1.3"
