--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "https://github.com/mp3cko/json-to-go-vsc",
   "displayName": "JSON to Go",
   "description": "Convert JSON data to Go type definition",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "engines": {
     "vscode": "^1.80.0",
     "node": ">=17.0.0"
@@ -141,19 +141,22 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.55.0",
-    "@vscode/vsce": "^2.24.0",
+    "@vscode/vsce": "^3.7.1",
     "eslint": "^8.52.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "glob": "^7.1.6",
+    "glob": "^13.0.3",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "ovsx": "^0.10.8",
+    "ovsx": "^0.10.9",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
     "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "glob": "^13.0.3"
   },
   "icon": "icon.png",
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
